// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Layout/MntContainer Article 1`] = `
<div
  className="mx-auto px-4 max-w-3xl h-32 border-4 border-dashed border-blue-600"
  size="article"
/>
`;

exports[`Storyshots Atoms/Layout/MntContainer Large 1`] = `
<div
  className="mx-auto px-4 max-w-screen-lg h-32 border-4 border-dashed border-blue-600"
  size="large"
/>
`;

exports[`Storyshots Atoms/Layout/MntContainer Ultra 1`] = `
<div
  className="mx-auto px-4 max-w-screen-2xl h-32 border-4 border-dashed border-blue-600"
  size="ultra"
/>
`;

exports[`Storyshots Atoms/Layout/MntContainer Wide 1`] = `
<div
  className="mx-auto px-4 max-w-screen-xl h-32 border-4 border-dashed border-blue-600"
  size="wide"
/>
`;

exports[`Storyshots Atoms/Layout/MntGrid Columns 1`] = `
<div
  className="grid gap-3 justify-items-start items-start"
>
  <div
    className="grid gap-3 grid-cols-1 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
  <div
    className="grid gap-3 grid-cols-2 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
  <div
    className="grid gap-3 grid-cols-3 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
  <div
    className="grid gap-3 grid-cols-4 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
  <div
    className="grid gap-3 grid-cols-5 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
  <div
    className="grid gap-3 grid-cols-6 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
  <div
    className="grid gap-3 grid-cols-7 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
  <div
    className="grid gap-3 grid-cols-8 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
  <div
    className="grid gap-3 grid-cols-9 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
  <div
    className="grid gap-3 grid-cols-10 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
  <div
    className="grid gap-3 grid-cols-11 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
  <div
    className="grid gap-3 grid-cols-12 justify-items-center items-center w-full h-32"
  >
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
    <div
      className="w-16 h-16 bg-blue-400 rounded"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Layout/MntGrid Main 1`] = `
<div
  className="grid gap-3 grid-cols-2 justify-items-center items-center w-full h-96"
>
  <div
    className="w-16 h-16 bg-blue-400 rounded"
  />
  <div
    className="w-16 h-16 bg-blue-400 rounded"
  />
</div>
`;

exports[`Storyshots Atoms/MntButton Color 1`] = `
<div
  className="grid gap-3 grid-cols-6 justify-items-center items-center"
>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-shade"
    color="primary"
  >
    primary
  </button>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-solid"
    color="primary"
  >
    primary
  </button>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-outline"
    color="primary"
  >
    primary
  </button>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-gradient"
    color="primary"
  >
    primary
  </button>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-link"
    color="primary"
  >
    primary
  </button>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-text"
    color="primary"
  >
    primary
  </button>
  <button
    className="mnt-btn mnt-btn-accent mnt-btn-shade"
    color="accent"
  >
    accent
  </button>
  <button
    className="mnt-btn mnt-btn-accent mnt-btn-solid"
    color="accent"
  >
    accent
  </button>
  <button
    className="mnt-btn mnt-btn-accent mnt-btn-outline"
    color="accent"
  >
    accent
  </button>
  <button
    className="mnt-btn mnt-btn-accent mnt-btn-gradient"
    color="accent"
  >
    accent
  </button>
  <button
    className="mnt-btn mnt-btn-accent mnt-btn-link"
    color="accent"
  >
    accent
  </button>
  <button
    className="mnt-btn mnt-btn-accent mnt-btn-text"
    color="accent"
  >
    accent
  </button>
  <button
    className="mnt-btn mnt-btn-success mnt-btn-shade"
    color="success"
  >
    success
  </button>
  <button
    className="mnt-btn mnt-btn-success mnt-btn-solid"
    color="success"
  >
    success
  </button>
  <button
    className="mnt-btn mnt-btn-success mnt-btn-outline"
    color="success"
  >
    success
  </button>
  <button
    className="mnt-btn mnt-btn-success mnt-btn-gradient"
    color="success"
  >
    success
  </button>
  <button
    className="mnt-btn mnt-btn-success mnt-btn-link"
    color="success"
  >
    success
  </button>
  <button
    className="mnt-btn mnt-btn-success mnt-btn-text"
    color="success"
  >
    success
  </button>
  <button
    className="mnt-btn mnt-btn-warning mnt-btn-shade"
    color="warning"
  >
    warning
  </button>
  <button
    className="mnt-btn mnt-btn-warning mnt-btn-solid"
    color="warning"
  >
    warning
  </button>
  <button
    className="mnt-btn mnt-btn-warning mnt-btn-outline"
    color="warning"
  >
    warning
  </button>
  <button
    className="mnt-btn mnt-btn-warning mnt-btn-gradient"
    color="warning"
  >
    warning
  </button>
  <button
    className="mnt-btn mnt-btn-warning mnt-btn-link"
    color="warning"
  >
    warning
  </button>
  <button
    className="mnt-btn mnt-btn-warning mnt-btn-text"
    color="warning"
  >
    warning
  </button>
  <button
    className="mnt-btn mnt-btn-danger mnt-btn-shade"
    color="danger"
  >
    danger
  </button>
  <button
    className="mnt-btn mnt-btn-danger mnt-btn-solid"
    color="danger"
  >
    danger
  </button>
  <button
    className="mnt-btn mnt-btn-danger mnt-btn-outline"
    color="danger"
  >
    danger
  </button>
  <button
    className="mnt-btn mnt-btn-danger mnt-btn-gradient"
    color="danger"
  >
    danger
  </button>
  <button
    className="mnt-btn mnt-btn-danger mnt-btn-link"
    color="danger"
  >
    danger
  </button>
  <button
    className="mnt-btn mnt-btn-danger mnt-btn-text"
    color="danger"
  >
    danger
  </button>
  <button
    className="mnt-btn mnt-btn-disabled mnt-btn-shade"
    color="disabled"
  >
    disabled
  </button>
  <button
    className="mnt-btn mnt-btn-disabled mnt-btn-solid"
    color="disabled"
  >
    disabled
  </button>
  <button
    className="mnt-btn mnt-btn-disabled mnt-btn-outline"
    color="disabled"
  >
    disabled
  </button>
  <button
    className="mnt-btn mnt-btn-disabled mnt-btn-gradient"
    color="disabled"
  >
    disabled
  </button>
  <button
    className="mnt-btn mnt-btn-disabled mnt-btn-link"
    color="disabled"
  >
    disabled
  </button>
  <button
    className="mnt-btn mnt-btn-disabled mnt-btn-text"
    color="disabled"
  >
    disabled
  </button>
</div>
`;

exports[`Storyshots Atoms/MntButton Main 1`] = `
<button
  className="mnt-btn mnt-btn-primary mnt-btn-shade"
  color="primary"
  disabled={false}
>
  Mountain UI
</button>
`;

exports[`Storyshots Atoms/MntButton Variant 1`] = `
<div
  className="grid gap-3 grid-cols-6 justify-items-center items-center"
>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-shade"
    color="primary"
  >
    shade
  </button>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-solid"
    color="primary"
  >
    solid
  </button>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-outline"
    color="primary"
  >
    outline
  </button>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-gradient"
    color="primary"
  >
    gradient
  </button>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-link"
    color="primary"
  >
    link
  </button>
  <button
    className="mnt-btn mnt-btn-primary mnt-btn-text"
    color="primary"
  >
    text
  </button>
</div>
`;

exports[`Storyshots Atoms/MntCode Main 1`] = `
<p
  className="leading-relaxed text-body text-[--c-text-primary]"
>
  MntCode component for displaying and styling 
  <code
    className="mnt-code"
  >
    variables names
  </code>
  , describe some
   
  <code
    className="mnt-code"
  >
    keywords
  </code>
   and much more.
</p>
`;

exports[`Storyshots Atoms/MntInput Decoration 1`] = `
<div
  className="grid gap-3 grid-cols-4 justify-items-start items-start"
>
  <div
    className="mnt-input mnt-input-success"
  >
    <label
      className="leading-relaxed text-body text-[--c-text-primary] mb-2 text-[--text-input]"
    >
      Age
      <div
        className="mnt-input-wrapper h-11 px-4 py-3"
      >
        <input
          className="mnt-input-node text-primary"
          type="number"
          value={30}
        />
      </div>
    </label>
    <p
      className="leading-relaxed text-body text-[--c-text-primary] text-caption text-[--text-input]"
    >
      Your age was correctly saved
    </p>
  </div>
  <div
    className="mnt-input mnt-input-error"
  >
    <label
      className="leading-relaxed text-body text-[--c-text-primary] mb-2 text-[--text-input]"
    >
      Name
      <div
        className="mnt-input-wrapper h-11 px-4 py-3"
      >
        <input
          className="mnt-input-node text-primary"
          value="Marco Antonio Ghiani"
        />
      </div>
    </label>
    <p
      className="leading-relaxed text-body text-[--c-text-primary] text-caption text-[--text-input]"
    >
      Oh no, your name seems too long!
    </p>
  </div>
  <div
    className="mnt-input mnt-input-warning"
  >
    <label
      className="leading-relaxed text-body text-[--c-text-primary] mb-2 text-[--text-input]"
    >
      Name
      <div
        className="mnt-input-wrapper h-11 px-4 py-3"
      >
        <input
          className="mnt-input-node text-primary"
          value="Marco Antonio Ghiani"
        />
      </div>
    </label>
    <p
      className="leading-relaxed text-body text-[--c-text-primary] text-caption text-[--text-input]"
    >
      Oh no, your name seems too long!
    </p>
  </div>
</div>
`;

exports[`Storyshots Atoms/MntInput Main 1`] = `
<div
  className="mnt-input mnt-input-default"
>
  <label
    className="leading-relaxed text-body text-[--c-text-primary] mb-2 text-[--text-input]"
  >
    Input label
    <div
      className="mnt-input-wrapper h-11 px-4 py-3"
    >
      <input
        className="mnt-input-node text-primary"
      />
    </div>
  </label>
</div>
`;

exports[`Storyshots Atoms/MntInput Size 1`] = `
<div
  className="grid gap-3 justify-items-start items-start grid-cols-5"
>
  <div
    className="mnt-input mnt-input-default"
  >
    <div
      className="mnt-input-wrapper h-9 px-3 py-2"
    >
      <input
        className="mnt-input-node text-caption"
        placeholder="Input with xs size"
      />
    </div>
  </div>
  <div
    className="mnt-input mnt-input-default"
  >
    <div
      className="mnt-input-wrapper h-10 px-3 py-4"
    >
      <input
        className="mnt-input-node text-secondaryBody"
        placeholder="Input with s size"
      />
    </div>
  </div>
  <div
    className="mnt-input mnt-input-default"
  >
    <div
      className="mnt-input-wrapper h-11 px-4 py-3"
    >
      <input
        className="mnt-input-node text-primary"
        placeholder="Input with m size"
      />
    </div>
  </div>
  <div
    className="mnt-input mnt-input-default"
  >
    <div
      className="mnt-input-wrapper h-12 px-5 py-4"
    >
      <input
        className="mnt-input-node text-primary"
        placeholder="Input with l size"
      />
    </div>
  </div>
  <div
    className="mnt-input mnt-input-default"
  >
    <div
      className="mnt-input-wrapper h-14 px-5 py-4"
    >
      <input
        className="mnt-input-node text-h5"
        placeholder="Input with xl size"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/MntInput Status 1`] = `
<div
  className="grid gap-3 grid-cols-4 justify-items-start items-start"
>
  <div
    className="mnt-input mnt-input-default"
  >
    <div
      className="mnt-input-wrapper h-11 px-4 py-3"
    >
      <input
        className="mnt-input-node text-primary"
        placeholder="Input with default status"
      />
    </div>
  </div>
  <div
    className="mnt-input mnt-input-success"
  >
    <div
      className="mnt-input-wrapper h-11 px-4 py-3"
    >
      <input
        className="mnt-input-node text-primary"
        placeholder="Input with success status"
      />
    </div>
  </div>
  <div
    className="mnt-input mnt-input-warning"
  >
    <div
      className="mnt-input-wrapper h-11 px-4 py-3"
    >
      <input
        className="mnt-input-node text-primary"
        placeholder="Input with warning status"
      />
    </div>
  </div>
  <div
    className="mnt-input mnt-input-error"
  >
    <div
      className="mnt-input-wrapper h-11 px-4 py-3"
    >
      <input
        className="mnt-input-node text-primary"
        placeholder="Input with error status"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/MntList Main 1`] = `
<ul
  className="mnt-list flex-col gap-4"
>
  <li
    className="mnt-list-item"
  >
    <span
      className="leading-relaxed text-body text-[--c-text-primary]"
    >
      Mountain UI library
    </span>
  </li>
  <li
    className="mnt-list-item"
  >
    <span
      className="leading-relaxed text-body text-[--c-text-primary]"
    >
      Mountain UI library
    </span>
  </li>
  <li
    className="mnt-list-item"
  >
    <span
      className="leading-relaxed text-body text-[--c-text-primary]"
    >
      Mountain UI library
    </span>
  </li>
  <li
    className="mnt-list-item"
  >
    <span
      className="leading-relaxed text-body text-[--c-text-primary]"
    >
      Mountain UI library
    </span>
  </li>
</ul>
`;

exports[`Storyshots Atoms/MntTag Main 1`] = `
<div
  className="mnt-tag cursor-default h-9 px-4 py-2"
>
  <span
    className="font-bold leading-relaxed text-body text-[--c-text-primary] text-light text-primary"
  >
    #mountain-ui
  </span>
</div>
`;

exports[`Storyshots Atoms/MntTag Size 1`] = `
<div
  className="flex gap-4"
>
  <div
    className="mnt-tag cursor-default h-7 px-3 py-1"
  >
    <span
      className="font-bold leading-relaxed text-body text-[--c-text-primary] text-light text-caption"
    >
      #mountain-ui
    </span>
  </div>
  <div
    className="mnt-tag cursor-default h-8 px-4 py-2"
  >
    <span
      className="font-bold leading-relaxed text-body text-[--c-text-primary] text-light text-secondaryBody"
    >
      #mountain-ui
    </span>
  </div>
  <div
    className="mnt-tag cursor-default h-9 px-4 py-2"
  >
    <span
      className="font-bold leading-relaxed text-body text-[--c-text-primary] text-light text-primary"
    >
      #mountain-ui
    </span>
  </div>
  <div
    className="mnt-tag cursor-default h-10 px-4 py-2"
  >
    <span
      className="font-bold leading-relaxed text-body text-[--c-text-primary] text-light text-h5"
    >
      #mountain-ui
    </span>
  </div>
  <div
    className="mnt-tag cursor-default h-11 px-5 py-3"
  >
    <span
      className="font-bold leading-relaxed text-body text-[--c-text-primary] text-light text-h5"
    >
      #mountain-ui
    </span>
  </div>
</div>
`;

exports[`Storyshots Atoms/MntTag Status 1`] = `
<div
  className="flex gap-4"
>
  <div
    className="mnt-tag cursor-default h-9 px-4 py-2"
  >
    <span
      className="font-bold leading-relaxed text-body text-[--c-text-primary] text-light text-primary"
    >
      #mountain-ui
    </span>
    <div
      className="mnt-tag-status w-3.5 h-3.5 -top-[1.5px] -right-[1.5px] bg-emerald-400"
      size="m"
    />
  </div>
  <div
    className="mnt-tag cursor-default h-9 px-4 py-2"
  >
    <span
      className="font-bold leading-relaxed text-body text-[--c-text-primary] text-light text-primary"
    >
      #mountain-ui
    </span>
    <div
      className="mnt-tag-status w-3.5 h-3.5 -top-[1.5px] -right-[1.5px] bg-yellow-400"
      size="m"
    />
  </div>
  <div
    className="mnt-tag cursor-default h-9 px-4 py-2"
  >
    <span
      className="font-bold leading-relaxed text-body text-[--c-text-primary] text-light text-primary"
    >
      #mountain-ui
    </span>
    <div
      className="mnt-tag-status w-3.5 h-3.5 -top-[1.5px] -right-[1.5px] bg-red-400"
      size="m"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Typography/MntHeading All 1`] = `
<div
  className="grid gap-3 justify-items-start items-start gap-4"
>
  <div>
    <span
      className="leading-relaxed text-secondaryBody text-[--c-text-secondary]"
    >
      H1
       - bold
    </span>
    <h1
      className="font-bold tracking-wide text-h1 leading-snug text-[--c-heading1]"
    >
      Mountain UI
    </h1>
  </div>
  <div>
    <span
      className="leading-relaxed text-secondaryBody text-[--c-text-secondary]"
    >
      H2
       - bold
    </span>
    <h2
      className="font-bold tracking-wide text-h2 leading-snug text-[--c-heading2]"
    >
      Mountain UI
    </h2>
  </div>
  <div>
    <span
      className="leading-relaxed text-secondaryBody text-[--c-text-secondary]"
    >
      H3
       - bold
    </span>
    <h3
      className="font-bold tracking-wide text-h3 leading-snug text-[--c-heading3]"
    >
      Mountain UI
    </h3>
  </div>
  <div>
    <span
      className="leading-relaxed text-secondaryBody text-[--c-text-secondary]"
    >
      H4
       - bold
    </span>
    <h4
      className="font-bold tracking-wide text-h4 leading-normal text-[--c-heading4]"
    >
      Mountain UI
    </h4>
  </div>
  <div>
    <span
      className="leading-relaxed text-secondaryBody text-[--c-text-secondary]"
    >
      H5
       - bold
    </span>
    <h5
      className="font-bold tracking-wide text-h5 leading-normal text-[--c-heading5]"
    >
      Mountain UI
    </h5>
  </div>
  <div>
    <span
      className="leading-relaxed text-secondaryBody text-[--c-text-secondary]"
    >
      H6
       - bold
    </span>
    <h6
      className="font-bold tracking-wide text-h6 leading-normal text-[--c-heading6]"
    >
      Mountain UI
    </h6>
  </div>
</div>
`;

exports[`Storyshots Atoms/Typography/MntHeading Main 1`] = `
<h1
  className="font-bold tracking-wide text-h1 leading-snug text-[--c-heading1]"
>
  Mountain UI
</h1>
`;

exports[`Storyshots Atoms/Typography/MntParagraph Main 1`] = `
<p
  className="leading-relaxed text-body text-[--c-text-primary]"
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
</p>
`;

exports[`Storyshots Atoms/Typography/MntText Main 1`] = `
<span
  className="leading-relaxed text-body text-[--c-text-primary]"
>
  Mountain UI
</span>
`;

exports[`Storyshots Atoms/Typography/MntText Variant 1`] = `
<div
  className="grid gap-3 grid-cols-3 justify-items-center items-center"
>
  <span
    className="leading-relaxed text-body text-[--c-text-primary]"
  >
    primary
     text
  </span>
  <span
    className="leading-relaxed text-secondaryBody text-[--c-text-secondary]"
  >
    secondary
     text
  </span>
  <span
    className="leading-relaxed text-caption text-[--c-text-caption]"
  >
    caption
     text
  </span>
</div>
`;

exports[`Storyshots Molecules/MntAccordion Main 1`] = `
<div
  className="mnt-accordion"
>
  <div
    className="mnt-accordion-summary"
    onClick={[Function]}
  >
    Show more
  </div>
  <div
    className="mnt-accordion-detail overflow-hidden"
    style={
      {
        "height": 0,
      }
    }
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
  </div>
</div>
`;

exports[`Storyshots Molecules/MntCodeBlock Main 1`] = `
<div
  className="mnt-codeblock"
>
  <span
    className="mnt-codeblock-syntax"
  >
    jsx
  </span>
  <pre
    className="mnt-codeblock-pre"
    tabIndex={0}
  >
    <code
      className="mnt-code"
    >
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token comment"
          style={
            {
              "color": "rgb(99, 119, 119)",
              "fontStyle": "italic",
            }
          }
        >
          /**
        </span>
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token comment"
          style={
            {
              "color": "rgb(99, 119, 119)",
              "fontStyle": "italic",
            }
          }
        >
           * The CodeBlock component is used to represent blocks of code.
        </span>
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token comment"
          style={
            {
              "color": "rgb(99, 119, 119)",
              "fontStyle": "italic",
            }
          }
        >
           */
        </span>
        <span
          className="token plain"
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain"
        />
        <span
          className="token keyword"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          function
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token function maybe-class-name"
          style={
            {
              "color": "rgb(130, 170, 255)",
            }
          }
        >
          CodeBlock
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token parameter punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token parameter"
          style={{}}
        >
           children
        </span>
        <span
          className="token parameter punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          ,
        </span>
        <span
          className="token parameter"
          style={{}}
        >
           syntax
        </span>
        <span
          className="token parameter punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          ,
        </span>
        <span
          className="token parameter"
          style={{}}
        >
           className
        </span>
        <span
          className="token parameter punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          ,
        </span>
        <span
          className="token parameter"
          style={{}}
        >
           
        </span>
        <span
          className="token parameter spread operator"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          ...
        </span>
        <span
          className="token parameter"
          style={{}}
        >
          props 
        </span>
        <span
          className="token parameter punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token parameter operator"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          :
        </span>
        <span
          className="token parameter"
          style={{}}
        >
           
        </span>
        <span
          className="token parameter maybe-class-name"
          style={{}}
        >
          CodeBlockProps
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token plain"
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain"
        >
            
        </span>
        <span
          className="token keyword control-flow"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          return
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token plain"
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain"
        >
              
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token tag class-name"
          style={
            {
              "color": "rgb(255, 203, 139)",
            }
          }
        >
          Highlight
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag spread operator"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          ...
        </span>
        <span
          className="token tag spread"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          defaultProps
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            {
              "color": "rgb(173, 219, 103)",
              "fontStyle": "italic",
            }
          }
        >
          theme
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          theme
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            {
              "color": "rgb(173, 219, 103)",
              "fontStyle": "italic",
            }
          }
        >
          code
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          children
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            {
              "color": "rgb(173, 219, 103)",
              "fontStyle": "italic",
            }
          }
        >
          language
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          syntax
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain-text"
          style={{}}
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain-text"
          style={{}}
        >
                
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token parameter punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token parameter"
          style={{}}
        >
           tokens
        </span>
        <span
          className="token parameter punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          ,
        </span>
        <span
          className="token parameter"
          style={{}}
        >
           getLineProps
        </span>
        <span
          className="token parameter punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          ,
        </span>
        <span
          className="token parameter"
          style={{}}
        >
           getTokenProps 
        </span>
        <span
          className="token parameter punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token arrow operator"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          =&gt;
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token plain"
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain"
        >
                  
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token tag class-name"
          style={
            {
              "color": "rgb(255, 203, 139)",
            }
          }
        >
          CodeBlockBox
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag spread operator"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          ...
        </span>
        <span
          className="token tag spread"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          props
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain-text"
          style={{}}
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain-text"
          style={{}}
        >
                    
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token tag class-name"
          style={
            {
              "color": "rgb(255, 203, 139)",
            }
          }
        >
          Pre
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            {
              "color": "rgb(173, 219, 103)",
              "fontStyle": "italic",
            }
          }
        >
          as
        </span>
        <span
          className="token tag attr-value punctuation attr-equals"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          =
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          "
        </span>
        <span
          className="token tag attr-value"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          pre
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          "
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            {
              "color": "rgb(173, 219, 103)",
              "fontStyle": "italic",
            }
          }
        >
          margin
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript number"
          style={
            {
              "color": "rgb(247, 140, 108)",
            }
          }
        >
          0
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            {
              "color": "rgb(173, 219, 103)",
              "fontStyle": "italic",
            }
          }
        >
          overflow
        </span>
        <span
          className="token tag attr-value punctuation attr-equals"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          =
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          "
        </span>
        <span
          className="token tag attr-value"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          auto
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          "
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            {
              "color": "rgb(173, 219, 103)",
              "fontStyle": "italic",
            }
          }
        >
          padding
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript number"
          style={
            {
              "color": "rgb(247, 140, 108)",
            }
          }
        >
          5
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            {
              "color": "rgb(173, 219, 103)",
              "fontStyle": "italic",
            }
          }
        >
          tabIndex
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript number"
          style={
            {
              "color": "rgb(247, 140, 108)",
            }
          }
        >
          0
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain-text"
          style={{}}
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain-text"
          style={{}}
        >
                      
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token plain"
        >
          tokens
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          .
        </span>
        <span
          className="token method function property-access"
          style={
            {
              "color": "rgb(130, 170, 255)",
            }
          }
        >
          map
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token parameter"
          style={{}}
        >
          line
        </span>
        <span
          className="token parameter punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          ,
        </span>
        <span
          className="token parameter"
          style={{}}
        >
           i
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token arrow operator"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          =&gt;
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token plain"
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain"
        >
                        
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          div
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            {
              "color": "rgb(173, 219, 103)",
              "fontStyle": "italic",
            }
          }
        >
          key
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          i
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag spread operator"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          ...
        </span>
        <span
          className="token tag spread method function property-access"
          style={
            {
              "color": "rgb(130, 170, 255)",
            }
          }
        >
          getLineProps
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag spread"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           line
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          ,
        </span>
        <span
          className="token tag spread"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag spread literal-property property"
          style={
            {
              "color": "rgb(128, 203, 196)",
            }
          }
        >
          key
        </span>
        <span
          className="token tag spread operator"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          :
        </span>
        <span
          className="token tag spread"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           i 
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain-text"
          style={{}}
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain-text"
          style={{}}
        >
                          
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token plain"
        >
          line
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          .
        </span>
        <span
          className="token method function property-access"
          style={
            {
              "color": "rgb(130, 170, 255)",
            }
          }
        >
          map
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token parameter"
          style={{}}
        >
          token
        </span>
        <span
          className="token parameter punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          ,
        </span>
        <span
          className="token parameter"
          style={{}}
        >
           key
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token arrow operator"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          =&gt;
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token plain"
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain"
        >
                            
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          span
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            {
              "color": "rgb(173, 219, 103)",
              "fontStyle": "italic",
            }
          }
        >
          key
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          key
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag spread operator"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          ...
        </span>
        <span
          className="token tag spread method function property-access"
          style={
            {
              "color": "rgb(130, 170, 255)",
            }
          }
        >
          getTokenProps
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          (
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          {
        </span>
        <span
          className="token tag spread"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           token
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          ,
        </span>
        <span
          className="token tag spread"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           key 
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token tag spread punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
           
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          /&gt;
        </span>
        <span
          className="token plain"
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain"
        >
                          
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token plain-text"
          style={{}}
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain-text"
          style={{}}
        >
                        
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="token tag"
          style={
            {
              "color": "rgb(127, 219, 202)",
            }
          }
        >
          div
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain"
        >
                      
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token plain-text"
          style={{}}
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain-text"
          style={{}}
        >
                    
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="token tag class-name"
          style={
            {
              "color": "rgb(255, 203, 139)",
            }
          }
        >
          Pre
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain-text"
          style={{}}
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain-text"
          style={{}}
        >
                  
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="token tag class-name"
          style={
            {
              "color": "rgb(255, 203, 139)",
            }
          }
        >
          CodeBlockBox
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain"
        >
                
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token plain-text"
          style={{}}
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain-text"
          style={{}}
        >
              
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="token tag class-name"
          style={
            {
              "color": "rgb(255, 203, 139)",
            }
          }
        >
          Highlight
        </span>
        <span
          className="token tag punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain"
        >
            
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          ;
        </span>
        <span
          className="token plain"
        />
      </p>
      <p
        className="token-line"
        style={
          {
            "backgroundColor": undefined,
            "color": "#d6deeb",
          }
        }
      >
        <span
          className="token plain"
        />
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          }
        </span>
        <span
          className="token punctuation"
          style={
            {
              "color": "rgb(199, 146, 234)",
            }
          }
        >
          ;
        </span>
      </p>
    </code>
  </pre>
</div>
`;
